--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "5.22.0",
     "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
@@ -27,7 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/bcryptjs": "^2.4.6",
-    "prisma": "^5.20.0",
+    "prisma": "5.22.0",
     "ts-node": "^10.9.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15"
