--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,66 @@
-Dockerfile
-.dockerignore
+# Dependencies
 node_modules
-npm-debug.log
-.next
-.git
-.gitignore
-README.md
-*.md
-.env*.local
-.vscode
-.idea
+.pnp
+.pnp.js
+
+# Testing
 coverage
+
+# Next.js
+.next
+out
+
+# Production
+build
+dist
+
+# Misc
 .DS_Store
 *.pem
-dist
-build
-.cache
-.temp
-*.log
+Thumbs.db
 
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Git
+.git
+.gitignore
+
+# Database (local dev)
+*.db
+*.db-journal
+data/
+
+# Documentation
+*.md
+!README.md
+
+# Test files
+__tests__
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
