--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,30 @@ services:
     environment:
       - NODE_ENV=production
       - DATABASE_URL=file:/app/data/production.db
+      # Раскомментируйте и укажите ваш домен
+      # - NEXTAUTH_URL=https://your-domain.ru
     volumes:
       # Персистентное хранилище для базы данных
-      - ./data:/app/data
+      - photoroom_data:/app/data
       # Персистентное хранилище для загруженных изображений
-      - ./public/images/uploads:/app/public/images/uploads
+      - photoroom_uploads:/app/public/images/uploads
     networks:
       - photoroom_network
-    command: sh -c "npx --yes prisma@5.22.0 db push --skip-generate && npx --yes prisma@5.22.0 db seed && node server.js"
+    # Запускаем миграцию БД и seed перед запуском сервера
+    command: >
+      sh -c "
+        npx --yes prisma@5.22.0 db push --skip-generate &&
+        npx --yes prisma@5.22.0 db seed &&
+        node server.js
+      "
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/auth/session"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
-  # Опционально: Nginx как reverse proxy
+  # Nginx reverse proxy (опционально)
   nginx:
     image: nginx:alpine
     container_name: photoroom_nginx
@@ -30,9 +44,11 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./public/images:/usr/share/nginx/html/images:ro
+      # Статические файлы для nginx (опционально)
+      - photoroom_uploads:/usr/share/nginx/html/images/uploads:ro
     depends_on:
-      - photoroom
+      photoroom:
+        condition: service_healthy
     networks:
       - photoroom_network
 
@@ -41,6 +57,7 @@ networks:
     driver: bridge
 
 volumes:
-  data:
-  uploads:
-
+  photoroom_data:
+    driver: local
+  photoroom_uploads:
+    driver: local
