--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,50 +3,54 @@ events {
 }
 
 http {
+    # Базовые MIME типы
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Логирование
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+    # Оптимизация
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    # Gzip сжатие
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+
+    # Upstream для Next.js приложения
     upstream photoroom_app {
         server photoroom:3000;
+        keepalive 32;
     }
 
-    # Перенаправление HTTP на HTTPS
+    # HTTP сервер (редирект на HTTPS или основной)
     server {
         listen 80;
-        server_name ваш_домен.ru www.ваш_домен.ru;
+        server_name _;
 
         # Для Let's Encrypt
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
 
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
+        # Если SSL настроен - редирект на HTTPS
+        # location / {
+        #     return 301 https://$host$request_uri;
+        # }
 
-    # HTTPS сервер
-    server {
-        listen 443 ssl http2;
-        server_name ваш_домен.ru www.ваш_домен.ru;
-
-        # SSL сертификаты (раскомментируйте когда будут готовы)
-        # ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        # ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-        # SSL настройки
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384;
-
-        # Максимальный размер загружаемого файла
-        client_max_body_size 50M;
-
-        # Статические файлы (изображения)
-        location /images/ {
-            alias /usr/share/nginx/html/images/;
-            expires 30d;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Проксирование на Next.js
+        # Без SSL - проксируем напрямую
         location / {
             proxy_pass http://photoroom_app;
             proxy_http_version 1.1;
@@ -63,6 +67,72 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
-    }
-}
 
+        # Статические изображения (кэширование)
+        location /images/ {
+            alias /usr/share/nginx/html/images/;
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+            
+            # Fallback на приложение если файл не найден
+            try_files $uri @app;
+        }
+
+        location @app {
+            proxy_pass http://photoroom_app;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Максимальный размер загружаемого файла
+        client_max_body_size 50M;
+    }
+
+    # HTTPS сервер (раскомментируйте после настройки SSL)
+    # server {
+    #     listen 443 ssl http2;
+    #     server_name your-domain.ru www.your-domain.ru;
+    #
+    #     # SSL сертификаты
+    #     ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    #     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    #
+    #     # SSL настройки
+    #     ssl_protocols TLSv1.2 TLSv1.3;
+    #     ssl_prefer_server_ciphers on;
+    #     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384;
+    #     ssl_session_cache shared:SSL:10m;
+    #     ssl_session_timeout 10m;
+    #
+    #     # Security headers
+    #     add_header X-Frame-Options "SAMEORIGIN" always;
+    #     add_header X-Content-Type-Options "nosniff" always;
+    #     add_header X-XSS-Protection "1; mode=block" always;
+    #
+    #     # Максимальный размер загружаемого файла
+    #     client_max_body_size 50M;
+    #
+    #     # Статические файлы
+    #     location /images/ {
+    #         alias /usr/share/nginx/html/images/;
+    #         expires 30d;
+    #         add_header Cache-Control "public, immutable";
+    #     }
+    #
+    #     # Проксирование на Next.js
+    #     location / {
+    #         proxy_pass http://photoroom_app;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection 'upgrade';
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_cache_bypass $http_upgrade;
+    #     }
+    # }
+}
