--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,8 +30,8 @@ http {
     gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
     # Upstream для Next.js приложения
-    upstream photoroom_app {
-        server photoroom:3000;
+    upstream klicme_app {
+        server klicme:3000;
         keepalive 32;
     }
 
@@ -52,7 +52,7 @@ http {
 
         # Без SSL - проксируем напрямую
         location / {
-            proxy_pass http://photoroom_app;
+            proxy_pass http://klicme_app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -79,7 +79,7 @@ http {
         }
 
         location @app {
-            proxy_pass http://photoroom_app;
+            proxy_pass http://klicme_app;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -124,7 +124,7 @@ http {
     #
     #     # Проксирование на Next.js
     #     location / {
-    #         proxy_pass http://photoroom_app;
+    #         proxy_pass http://klicme_app;
     #         proxy_http_version 1.1;
     #         proxy_set_header Upgrade $http_upgrade;
     #         proxy_set_header Connection 'upgrade';
